hphp/test/slow/case-types/recursion-2.php.expectf
Fatal error: Unknown type or class C2 in %s on line 5
